--- a/src/moodle_tools/questions/templates/coderunner.xml.j2
+++ b/src/moodle_tools/questions/templates/coderunner.xml.j2
@@ -66,7 +66,9 @@
         {% endfor %}
         {% for file in files %}
         <file name="{{ file.name }}" path="/" encoding="base64">
-            {{ file.encoding if file.encoding else "" }}
+        {% if file.encoding %}
+            {{ file.encoding }}
+        {% endif %}
         </file>
         {% endfor %}
     </testcases>
